<resources>
    <string name="app_name">安卓实验 - 胡斌强</string>

    <string name="lab1">实验一：第一个Android程序</string>
    <string name="hello">你好，胡斌强</string>

    <string name="lab2">实验二：Android布局</string>
    <string name="lab2_1">实验二：Android布局之线性布局</string>
    <string name="lab2_2">实验二：Android布局之相对布局</string>
    <string name="lab2_3">实验二：Android布局之表格布局</string>

    <string name="lab3">实验三：Android UI组件</string>
    <string name="lab3_1">实验三：Android UI组件之ListView</string>
    <string name="lab3_2">实验三：Android UI组件之AlertDialog</string>
    <string name="lab3_3">实验三：Android UI组件之Menu</string>
    <string name="lab3_4">实验三：Android UI组件之ActionMode</string>

    <string name="menu_text_size">字体大小</string>
    <string name="menu_normal">普通菜单项</string>
    <string name="menu_text_color">字体颜色</string>
    <string name="menu_text_size_small">小号</string>
    <string name="menu_text_size_middle">中号</string>
    <string name="menu_text_size_big">大号</string>
    <string name="menu_text_color_red">红色</string>
    <string name="menu_text_color_black">黑色</string>
    <string name="menu_text">测试文本</string>

    <string name="action_mode_cancle">取消</string>
    <string name="action_mode_delete">删除</string>

    <string name="lab4">实验四：扩展的 Activity</string>
    <string-array name="entries_list_preference">
        <item>Alpha Option 01</item>
        <item>Beta Option 02</item>
        <item>Charlie Option 03</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item>01</item>
        <item>02</item>
        <item>03</item>
    </string-array>


    <string name="lab5">实验五：Android Intent</string>
    <string name="webview_button1">浏览该网页</string>
    <string name="webview_button2">浏览该网页(自定义)</string>
    <string name="webview_edit">请输入网址</string>


</resources>
