<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/lab1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab1"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/lab2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab2"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/lab3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab3"
        android:textAllCaps="false"/>


</LinearLayout>
